--- a/StorefrontApp/Pages/Index.razor
+++ b/StorefrontApp/Pages/Index.razor
@@ -27,8 +27,16 @@
         <span class="sr-only">Next</span>
     </a>
 </div>
-<div class="px-3">
-    <Store />
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col col-sm-3">
+            <div class="card">
+                <h4 class="card-title">Store</h4>
+                <a href="/store"><img src="/images/SoCGame.jpeg" class="rounded mx-auto d-block" style="width: 100px; height:100px;" /></a>
+            </div>
+        </div>
+    </div>
 </div>
 
 @code{
