--- a/StorefrontApp/Shared/MainLayout.razor.css
+++ b/StorefrontApp/Shared/MainLayout.razor.css
@@ -5,6 +5,6 @@
 }
 
 main {
-    /*    background-color: rgb(236, 165, 242);*/
-    background-color: rgba(130, 40, 247, 0.6);
+    background-image: linear-gradient(90deg, rgba(232,225,250,0.3) 30%, rgba(184,159,245,0.7));
+    min-height: 100vh;
 }
